category/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
  labels:
    app: category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
      - name: category
        image: docker.io/robinfoe/tsm-category
        ports:
        - containerPort: 8080
        command: ["java"]
        args: ["-jar", "-Dspring.config.location=file:/app/config/app.properties", "category.jar"]
        volumeMounts:
        - name: category-config
          mountPath: /app/config/
      volumes:
      - name: category-config
        configMap:
          name: category-config
