category/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: category
  labels:
    app: category
spec:
  ports:
    - port: 8080
      name: category-port
  selector:
    app: category
